force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Object created to store user feedback:
- Compliment
- Report a bug
- Request a new feature</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FEEDBACK-{000000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>