force-app/main/default/objects/Feedback__c/fields/CloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>CloseDateTime__c</fullName>
    <description>Automatically set when Feedback item is closed.</description>
    <label>Close Date/Time</label>
    <type>DateTime</type>
</CustomField>