force-app/main/default/objects/Feedback__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <inlineHelpText>This field holds the Object Name of the record the Feedback is related to (Account, Contact, Lead, etc)</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>