force-app/main/default/objects/Feedback__c/fields/RecordURLform__c.field-meta.xml
<CustomField>
    <fullName>RecordURLform__c</fullName>
    <formula>LEFT
($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp;  RecordId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>