force-app/main/default/objects/Feedback__c/fields/ScoreAuto__c.field-meta.xml
<CustomField>
    <fullName>ScoreAuto__c</fullName>
    <description>Rollup field of the total score of all votes.</description>
    <label>Score</label>
    <summarizedField>FeedbackVote__c.VoteScore__c</summarizedField>
    <summaryForeignKey>FeedbackVote__c.Feedback__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>