force-app/main/default/objects/Feedback__c/recordTypes/BusinessIdea.recordType-meta.xml
<RecordType>
    <fullName>BusinessIdea</fullName>
    <active>true</active>
    <description>Do you have a good idea for improving our business?</description>
    <label>Business Idea</label>
</RecordType>