force-app/main/default/objects/Feedback__c/recordTypes/Compliment.recordType-meta.xml
<RecordType>
    <fullName>Compliment</fullName>
    <active>true</active>
    <description>Be nice, give a compliment</description>
    <label>Compliment</label>
</RecordType>