force-app/main/default/objects/Feedback__c/recordTypes/FeatureRequest.recordType-meta.xml
<RecordType>
    <fullName>FeatureRequest</fullName>
    <active>true</active>
    <description>Do you have a request for a new feature in Salesforce?</description>
    <label>Feature Request</label>
</RecordType>